Fix deprecated method usages in client-core and server-test modules
  - Replace IOUtils.toString(InputStream) with IOUtils.toString(InputStream, StandardCharsets.UTF_8) in ODataJsonSerializerTest.java (31 instances)
  - Replace Assert.assertThat with MatcherAssert.assertThat in ODataJsonSerializerTest.java (10 instances)
  - Replace deprecated Polygon(Dimension, SRID, List<Point>, List<Point>) constructor with new Polygon(Dimension, SRID, List<LineString>, LineString) in
  ODataJsonSerializerTest.java (4 instances)
  - Replace deprecated JsonParser.getCurrentName() with currentName() in client-core module (39 files)