@@ -232,7 +232,7 @@ public class MetadataDocumentJsonSerializerTest {
     EdmSchema schema = mock(EdmSchema.class);
     when(schema.getNamespace()).thenReturn("MyNamespace");
     Edm edm = mock(Edm.class);
-    when(edm.getSchemas()).thenReturn(Arrays.asList(schema));
+    when(edm.getSchemas()).thenReturn(List.of(schema));
     
     // create mock metadata
     ServiceMetadata serviceMetadata = mock(ServiceMetadata.class);
@@ -240,7 +240,7 @@ public class MetadataDocumentJsonSerializerTest {
     
     // add mock enums to schema
     EdmEnumType enumType = mock(EdmEnumType.class);
-    when(schema.getEnumTypes()).thenReturn(Arrays.asList(enumType));
+    when(schema.getEnumTypes()).thenReturn(Collections.singletonList(enumType));
     when(enumType.getName()).thenReturn("MyEnum");
     when(enumType.getKind()).thenReturn(EdmTypeKind.ENUM);
     EdmPrimitiveType int32Type = OData.newInstance().createPrimitiveTypeInstance(EdmPrimitiveTypeKind.Int32);
@@ -284,7 +284,7 @@ public class MetadataDocumentJsonSerializerTest {
     EdmSchema schema = mock(EdmSchema.class);
     when(schema.getNamespace()).thenReturn("MyNamespace");
     Edm edm = mock(Edm.class);
-    when(edm.getSchemas()).thenReturn(Arrays.asList(schema));
+    when(edm.getSchemas()).thenReturn(List.of(schema));
     ServiceMetadata serviceMetadata = mock(ServiceMetadata.class);
     when(serviceMetadata.getEdm()).thenReturn(edm);
 
@@ -311,9 +311,9 @@ public class MetadataDocumentJsonSerializerTest {
     EdmSchema schema = mock(EdmSchema.class);
     when(schema.getNamespace()).thenReturn("MyNamespace");
     Edm edm = mock(Edm.class);
-    when(edm.getSchemas()).thenReturn(Arrays.asList(schema));
+    when(edm.getSchemas()).thenReturn(List.of(schema));
     EdmTypeDefinition typeDefinition = mock(EdmTypeDefinition.class);
-    when (schema.getTypeDefinitions()).thenReturn(Arrays.asList(typeDefinition));
+    when (schema.getTypeDefinitions()).thenReturn(Collections.singletonList(typeDefinition));
     when(typeDefinition.getMaxLength()).thenReturn(10);
     when(typeDefinition.getScale()).thenReturn(2);
     when(typeDefinition.getPrecision()).thenReturn(10);
@@ -533,7 +533,7 @@ public class MetadataDocumentJsonSerializerTest {
         .setType(nameETAbstract)
         .setNullable(false)
         .setOnDelete(new CsdlOnDelete().setAction(CsdlOnDeleteAction.Cascade)
-            .setAnnotations(Arrays.asList(new CsdlAnnotation().setTerm("core.Term"))));
+            .setAnnotations(Collections.singletonList(new CsdlAnnotation().setTerm("core.Term"))));
     
     private final FullQualifiedName nameCTTwoPrim = new FullQualifiedName(nameSpace, "CTTwoPrim");
     private final FullQualifiedName nameCTTwoPrimBase = new FullQualifiedName(nameSpace, "CTTwoPrimBase");
@@ -571,7 +571,7 @@ public class MetadataDocumentJsonSerializerTest {
         .setFlags(true)
         .setUnderlyingType(EdmPrimitiveTypeKind.Int16.getFullQualifiedName())
         .setMembers(Collections.singletonList(
-            new CsdlEnumMember().setName("String1").setValue("1").setAnnotations(Arrays.asList(memberAnnotation))));
+            new CsdlEnumMember().setName("String1").setValue("1").setAnnotations(Collections.singletonList(memberAnnotation))));
       }
       return null;
     }
@@ -582,22 +582,22 @@ public class MetadataDocumentJsonSerializerTest {
         return new CsdlEntityType()
         .setName("ETAbstract")
         .setAbstract(true)
-        .setNavigationProperties(Arrays.asList(
-            new CsdlNavigationProperty().setName("NavPropertyETTwoKeyNavOne").setType(nameETTwoKeyNavOne)))
+        .setNavigationProperties(Collections.singletonList(
+                new CsdlNavigationProperty().setName("NavPropertyETTwoKeyNavOne").setType(nameETTwoKeyNavOne)))
         .setProperties(Collections.singletonList(propertyString));
       } else if (entityTypeName.equals(nameETAbstractBase)) {
         CsdlAnnotation annotation = new CsdlAnnotation()
             .setTerm("Core.Description")
             .setQualifier("Target")
             .setExpression(new CsdlConstantExpression(ConstantExpressionType.String, "Description of Type"));
-        propertyInt16_NotNullable.setAnnotations(Arrays.asList(annotation));
+        propertyInt16_NotNullable.setAnnotations(Collections.singletonList(annotation));
         
         return new CsdlEntityType()
         .setName("ETAbstractBase")
         .setBaseType(nameETAbstract)
         .setKey(Collections.singletonList(new CsdlPropertyRef().setName("PropertyInt16")))
         .setProperties(Collections.singletonList(propertyInt16_NotNullable))
-        .setAnnotations(Arrays.asList(annotation));
+        .setAnnotations(Collections.singletonList(annotation));
       } else if (entityTypeName.equals(nameET)) {
         return new CsdlEntityType()
             .setName("ET")
@@ -619,8 +619,8 @@ public class MetadataDocumentJsonSerializerTest {
         return new CsdlEntityType()
             .setName("ETOne")
             .setKey(Collections.singletonList(new CsdlPropertyRef().setName("PropertyInt16")))
-            .setNavigationProperties(Arrays.asList(
-                new CsdlNavigationProperty().setName("NavPropertyET").setType(nameET)))
+            .setNavigationProperties(Collections.singletonList(
+                    new CsdlNavigationProperty().setName("NavPropertyET").setType(nameET)))
             .setProperties(Collections.singletonList(propertyInt16_NotNullable));
       } else if (entityTypeName.equals(nameETTwoKeyNavOne)) {
         return new CsdlEntityType()
@@ -628,17 +628,17 @@ public class MetadataDocumentJsonSerializerTest {
             .setBaseType(nameETOne)
             .setHasStream(true)
             .setProperties(Collections.singletonList(propertyString))
-            .setNavigationProperties(Arrays.asList(
-                new CsdlNavigationProperty().setName("NavPropertyETAbstract")
-                .setCollection(true).setType(nameETAbstract)
-                .setContainsTarget(true).setPartner("NavPropertyETTwoKeyNavOne").setNullable(false)
-                .setReferentialConstraints(Collections.singletonList(new CsdlReferentialConstraint()
-                    .setProperty("PropertyString").setReferencedProperty("PropertyString")
-                    .setAnnotations(Collections.singletonList(new CsdlAnnotation()
-            .setTerm("Core.Description")
-            .setQualifier("Target")
-            .setExpression(new CsdlConstantExpression(
-                ConstantExpressionType.String, "Description of Complex Type"))))))));
+            .setNavigationProperties(Collections.singletonList(
+                    new CsdlNavigationProperty().setName("NavPropertyETAbstract")
+                            .setCollection(true).setType(nameETAbstract)
+                            .setContainsTarget(true).setPartner("NavPropertyETTwoKeyNavOne").setNullable(false)
+                            .setReferentialConstraints(Collections.singletonList(new CsdlReferentialConstraint()
+                                    .setProperty("PropertyString").setReferencedProperty("PropertyString")
+                                    .setAnnotations(Collections.singletonList(new CsdlAnnotation()
+                                            .setTerm("Core.Description")
+                                            .setQualifier("Target")
+                                            .setExpression(new CsdlConstantExpression(
+                                                    ConstantExpressionType.String, "Description of Complex Type"))))))));
       }
       return null;
     }
@@ -662,7 +662,7 @@ public class MetadataDocumentJsonSerializerTest {
         .setName("CTTwoPrimBase")
         .setBaseType(nameCTTwoPrim)
         .setProperties(Arrays.asList(propertyInt16_NotNullable, propertyString))
-        .setAnnotations(Arrays.asList(annotation));
+        .setAnnotations(Collections.singletonList(annotation));
       }
       if (complexTypeName.equals(nameCTEntityInfo)) {
         return new CsdlComplexType()
@@ -672,7 +672,7 @@ public class MetadataDocumentJsonSerializerTest {
       if (complexTypeName.equals(nameCTPrimComp)) {
         return new CsdlComplexType()
         .setName("CTPrimComp")
-        .setProperties(Arrays.asList(propertyString));
+        .setProperties(Collections.singletonList(propertyString));
       }
       return null;
 
@@ -697,14 +697,14 @@ public class MetadataDocumentJsonSerializerTest {
             .setEntitySetPath("BindingParam/NavPropertyETTwoKeyNavOne")
             .setBound(true),
             new CsdlAction().setName("BAETTwoKeyNavRTETTwoKeyNavParam")
-            .setParameters(Arrays.asList(
-                new CsdlParameter().setName("BindingParam").setType(nameET)))
+            .setParameters(Collections.singletonList(
+                    new CsdlParameter().setName("BindingParam").setType(nameET)))
             .setReturnType(new CsdlReturnType().setNullable(false).setType(nameET))
             .setBound(true)
             .setEntitySetPath("BindingParam/NavPropertyET"),
             new CsdlAction().setName("BAETTwoKeyNavRTETTwoKeyNavParam")
-            .setParameters(Arrays.asList(
-                new CsdlParameter().setName("PropertyComp").setType(nameCTPrimComp)))
+            .setParameters(Collections.singletonList(
+                    new CsdlParameter().setName("PropertyComp").setType(nameCTPrimComp)))
             .setReturnType(new CsdlReturnType().setNullable(false).setType(nameET)));
       }
       if (actionName.equals(nameBAProp)) {
@@ -740,8 +740,8 @@ public class MetadataDocumentJsonSerializerTest {
             .setEntitySetPath("BindingParam/NavPropertyETTwoKeyNavOne")
             .setBound(true).setComposable(true),
             new CsdlFunction().setName("BFETTwoKeyNavRTETTwoKeyNavParam")
-            .setParameters(Arrays.asList(
-                new CsdlParameter().setName("BindingParam").setType(nameET)))
+            .setParameters(Collections.singletonList(
+                    new CsdlParameter().setName("BindingParam").setType(nameET)))
             .setReturnType(new CsdlReturnType().setNullable(false).setType(nameET))
             .setBound(true)
             .setEntitySetPath("BindingParam/NavPropertyET"));
@@ -752,43 +752,35 @@ public class MetadataDocumentJsonSerializerTest {
     @Override
     public CsdlEntitySet getEntitySet(final FullQualifiedName entityContainer, final String entitySetName)
         throws ODataException {
-      if (entitySetName.equals("ESAllPrim")) {
-        return new CsdlEntitySet()
-        .setName("ESAllPrim")
-        .setType(nameETAbstractBase);
-      }
-      if (entitySetName.equals("ESOne")) {
-        return new CsdlEntitySet()
-            .setName("ESOne")
-            .setType(nameETOne);
-      }
-      if (entitySetName.equals("ESTwoKeyNav")) {
-        return new CsdlEntitySet()
-            .setName("ESTwoKeyNav")
-            .setType(nameETTwoKeyNav)
-            .setNavigationPropertyBindings(Arrays.asList(new CsdlNavigationPropertyBinding()
-                .setPath("NavPropertyETTwoKeyNavOne/namespace.ETOne/NavPropertyET")
-                .setTarget("ES"),
-                new CsdlNavigationPropertyBinding()
-                .setPath("NavPropertyETOne")
-                .setTarget("ESOne")));
-      }
-      if (entitySetName.equals("ESTwoKeyNavOne")) {
-        return new CsdlEntitySet()
-            .setName("ESTwoKeyNavOne")
-            .setType(nameETTwoKeyNavOne)
-            .setIncludeInServiceDocument(true);
-      }
-      if (entitySetName.equals("ES")) {
-        return new CsdlEntitySet()
-            .setName("ES")
-            .setType(nameET)
-            .setIncludeInServiceDocument(false)
-            .setNavigationPropertyBindings(Collections.singletonList(new CsdlNavigationPropertyBinding()
-                .setPath("NavPropertyETOne")
-                .setTarget("ESOne")));
-      }
-      return null;
+        return switch (entitySetName) {
+            case "ESAllPrim" -> new CsdlEntitySet()
+                    .setName("ESAllPrim")
+                    .setType(nameETAbstractBase);
+            case "ESOne" -> new CsdlEntitySet()
+                    .setName("ESOne")
+                    .setType(nameETOne);
+            case "ESTwoKeyNav" -> new CsdlEntitySet()
+                    .setName("ESTwoKeyNav")
+                    .setType(nameETTwoKeyNav)
+                    .setNavigationPropertyBindings(Arrays.asList(new CsdlNavigationPropertyBinding()
+                                    .setPath("NavPropertyETTwoKeyNavOne/namespace.ETOne/NavPropertyET")
+                                    .setTarget("ES"),
+                            new CsdlNavigationPropertyBinding()
+                                    .setPath("NavPropertyETOne")
+                                    .setTarget("ESOne")));
+            case "ESTwoKeyNavOne" -> new CsdlEntitySet()
+                    .setName("ESTwoKeyNavOne")
+                    .setType(nameETTwoKeyNavOne)
+                    .setIncludeInServiceDocument(true);
+            case "ES" -> new CsdlEntitySet()
+                    .setName("ES")
+                    .setType(nameET)
+                    .setIncludeInServiceDocument(false)
+                    .setNavigationPropertyBindings(Collections.singletonList(new CsdlNavigationPropertyBinding()
+                            .setPath("NavPropertyETOne")
+                            .setTarget("ESOne")));
+            default -> null;
+        };
     }
 
     @Override
@@ -935,7 +927,7 @@ public class MetadataDocumentJsonSerializerTest {
       container.setName("container1");
 
       // EntitySets
-      container.setEntitySets(Arrays.asList(getEntitySet(nameContainer1, "ESAllPrim")));
+      container.setEntitySets(Collections.singletonList(getEntitySet(nameContainer1, "ESAllPrim")));
       container.setExtendsContainer(nameContainer2.getFullQualifiedNameAsString());
 
       return container;
@@ -1174,7 +1166,7 @@ public class MetadataDocumentJsonSerializerTest {
         .setAnnotations(innerAnnotations);
         annotationsList.add(new CsdlAnnotation().setTerm("ns.term").setQualifier("T33")
             .setExpression(new CsdlRecord().setType("Alias.ETAbstract")
-                .setPropertyValues(Arrays.asList(prop))
+                .setPropertyValues(Collections.singletonList(prop))
                 .setAnnotations(innerAnnotations))); 
 
         annotationsList.add(new CsdlAnnotation().setTerm("ns.term").setQualifier("T34")
