@@ -24,7 +24,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.URI;
 import java.nio.ByteBuffer;
-import java.nio.channels.WritableByteChannel;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.time.Instant;
@@ -66,12 +65,10 @@ import org.sitenetsoft.olinguito.commons.api.edm.geo.MultiPolygon;
 import org.sitenetsoft.olinguito.commons.api.edm.geo.Point;
 import org.sitenetsoft.olinguito.commons.api.edm.geo.Polygon;
 import org.sitenetsoft.olinguito.commons.api.edm.geo.SRID;
-import org.sitenetsoft.olinguito.commons.api.edmx.EdmxReference;
 import org.sitenetsoft.olinguito.commons.api.format.ContentType;
 import org.sitenetsoft.olinguito.server.api.OData;
 import org.sitenetsoft.olinguito.server.api.ODataContent;
 import org.sitenetsoft.olinguito.server.api.ODataContentWriteErrorCallback;
-import org.sitenetsoft.olinguito.server.api.ODataContentWriteErrorContext;
 import org.sitenetsoft.olinguito.server.api.ServiceMetadata;
 import org.sitenetsoft.olinguito.server.api.serializer.ComplexSerializerOptions;
 import org.sitenetsoft.olinguito.server.api.serializer.EntityCollectionSerializerOptions;
@@ -96,6 +93,7 @@ import org.sitenetsoft.olinguito.server.tecsvc.data.DataProvider;
 import org.sitenetsoft.olinguito.server.tecsvc.provider.EdmTechProvider;
 import org.hamcrest.CoreMatchers;
 import org.hamcrest.Matcher;
+import org.hamcrest.MatcherAssert;
 import org.junit.Assert;
 import org.junit.Test;
 import org.mockito.Mockito;
@@ -103,7 +101,7 @@ import org.mockito.Mockito;
 public class ODataJsonSerializerTest {
   private static final OData odata = OData.newInstance();
   private static final ServiceMetadata metadata = odata.createServiceMetadata(
-      new EdmTechProvider(), Collections.<EdmxReference> emptyList(), new MetadataETagSupport("W/\"metadataETag\""));
+      new EdmTechProvider(), Collections.emptyList(), new MetadataETagSupport("W/\"metadataETag\""));
   private static final EdmEntityContainer entityContainer = metadata.getEdm().getEntityContainer();
   private final DataProvider data = new DataProvider(odata, metadata.getEdm());
   private final ODataSerializer serializer = new ODataJsonSerializer(ContentType.JSON);
@@ -409,7 +407,7 @@ public class ODataJsonSerializerTest {
         entity,
         EntitySerializerOptions.with()
             .contextURL(ContextURL.with().entitySet(edmEntitySet).suffix(Suffix.ENTITY).build())
-            .build()).getContent());
+            .build()).getContent(), StandardCharsets.UTF_8);
     final String expectedResult = "{\"@odata.context\":\"$metadata#ESAllPrim/$entity\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
         + "\"PropertyInt16\":32767,"
@@ -448,8 +446,8 @@ public class ODataJsonSerializerTest {
     } catch (final SerializerException e) {
       Assert.assertEquals(SerializerException.MessageKeys.WRONG_PROPERTY_VALUE, e.getMessageKey());
       final String message = e.getLocalizedMessage();
-      Assert.assertThat(message, CoreMatchers.containsString("PropertyInt16"));
-      Assert.assertThat(message, CoreMatchers.containsString("false"));
+      MatcherAssert.assertThat(message, CoreMatchers.containsString("PropertyInt16"));
+      MatcherAssert.assertThat(message, CoreMatchers.containsString("false"));
     }
   }
 
@@ -468,12 +466,12 @@ public class ODataJsonSerializerTest {
             .build()).getContent();
     final String resultString = IOUtils.toString(result, StandardCharsets.UTF_8);
 
-    Assert.assertThat(resultString, CoreMatchers.startsWith("{"
+    MatcherAssert.assertThat(resultString, CoreMatchers.startsWith("{"
         + "\"@odata.context\":\"$metadata#ESCompAllPrim\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
         + "\"@odata.count\":4,\"value\":["
         + "{\"@odata.etag\":\"W/\\\"32767\\\"\","));
-    Assert.assertThat(resultString, CoreMatchers.endsWith("}}],"
+    MatcherAssert.assertThat(resultString, CoreMatchers.endsWith("}}],"
         + "\"@odata.nextLink\":\"/next\"}"));
 
     int count = 0;
@@ -488,8 +486,8 @@ public class ODataJsonSerializerTest {
   public void entityCollectionStreamed() throws Exception {
     final EdmEntitySet edmEntitySet = entityContainer.getEntitySet("ESAllPrim");
     final EntityIterator entityIterator = new EntityIterator() {
-      EntityCollection entityCollection = data.readAll(edmEntitySet);
-      Iterator<Entity> innerIterator = entityCollection.iterator();
+      final EntityCollection entityCollection = data.readAll(edmEntitySet);
+      final Iterator<Entity> innerIterator = entityCollection.iterator();
       
       @Override
       public List<Operation> getOperations() {
@@ -515,13 +513,13 @@ public class ODataJsonSerializerTest {
             .build()).getODataContent();
     ByteArrayOutputStream bout = new ByteArrayOutputStream();
     result.write(bout);
-    final String resultString = new String(bout.toByteArray(), "UTF-8");
+    final String resultString = new String(bout.toByteArray(), StandardCharsets.UTF_8);
 
-    Assert.assertThat(resultString, CoreMatchers.startsWith("{"
+    MatcherAssert.assertThat(resultString, CoreMatchers.startsWith("{"
         + "\"@odata.context\":\"$metadata#ESAllPrim\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
         + "\"value\":[{\"PropertyInt16\":32767,\"PropertyString\""));
-    Assert.assertThat(resultString, CoreMatchers.endsWith(
+    MatcherAssert.assertThat(resultString, CoreMatchers.endsWith(
         "\"PropertyTimeOfDay\":\"00:01:01\"}]}"));
 
     int count = 0;
@@ -536,8 +534,8 @@ public class ODataJsonSerializerTest {
   public void entityCollectionStreamedWithError() throws Exception {
     final EdmEntitySet edmEntitySet = entityContainer.getEntitySet("ESAllPrim");
     final EntityIterator entityIterator = new EntityIterator() {
-      EntityCollection entityCollection = data.readAll(edmEntitySet);
-      Iterator<Entity> innerIterator = entityCollection.iterator();
+      final EntityCollection entityCollection = data.readAll(edmEntitySet);
+      final Iterator<Entity> innerIterator = entityCollection.iterator();
       
       @Override
       public List<Operation> getOperations() {
@@ -558,18 +556,15 @@ public class ODataJsonSerializerTest {
     CountOption countOption = Mockito.mock(CountOption.class);
     Mockito.when(countOption.getValue()).thenReturn(true);
 
-    ODataContentWriteErrorCallback errorCallback = new ODataContentWriteErrorCallback() {
-      @Override
-      public void handleError(ODataContentWriteErrorContext context, WritableByteChannel channel) {
-        try {
-          Exception ex = context.getException();
-          Assert.assertEquals(ex, context.getODataLibraryException());
-          String msgKey = context.getODataLibraryException().getMessageKey().getKey();
-          String toChannel = "ERROR: " + msgKey;
-          channel.write(ByteBuffer.wrap(toChannel.getBytes("UTF-8")));
-        } catch (IOException e) {
-          throw new RuntimeException("Error in error.");
-        }
+    ODataContentWriteErrorCallback errorCallback = (context, channel) -> {
+      try {
+        Exception ex = context.getException();
+        Assert.assertEquals(ex, context.getODataLibraryException());
+        String msgKey = context.getODataLibraryException().getMessageKey().getKey();
+        String toChannel = "ERROR: " + msgKey;
+        channel.write(ByteBuffer.wrap(toChannel.getBytes(StandardCharsets.UTF_8)));
+      } catch (IOException e) {
+        throw new RuntimeException("Error in error.");
       }
     };
 
@@ -581,7 +576,7 @@ public class ODataJsonSerializerTest {
             .build()).getODataContent();
     ByteArrayOutputStream bout = new ByteArrayOutputStream();
     result.write(bout);
-    final String resultString = new String(bout.toByteArray(), "UTF-8");
+    final String resultString = new String(bout.toByteArray(), StandardCharsets.UTF_8);
     Assert.assertEquals("ERROR: MISSING_PROPERTY", resultString);
   }
 
@@ -802,7 +797,7 @@ public class ODataJsonSerializerTest {
     final String resultString = IOUtils.toString(serializer.entity(metadata, edmEntitySet.getEntityType(), entity,
         EntitySerializerOptions.with()
             .contextURL(ContextURL.with().entitySet(edmEntitySet).suffix(Suffix.ENTITY).build())
-            .build()).getContent());
+            .build()).getContent(), StandardCharsets.UTF_8);
     final String expectedResult = "{\"@odata.context\":\"$metadata#ESMixPrimCollComp/$entity\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
         + "\"PropertyInt16\":32767,"
@@ -829,7 +824,7 @@ public class ODataJsonSerializerTest {
     final String resultString = IOUtils.toString(serializer.entity(metadata, edmEntitySet.getEntityType(), entity,
         EntitySerializerOptions.with()
             .contextURL(ContextURL.with().entitySet(edmEntitySet).suffix(Suffix.ENTITY).build())
-            .build()).getContent());
+            .build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{\"@odata.context\":\"$metadata#ESMixEnumDefCollComp/$entity\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
         + "\"PropertyEnumString\":\"String2,String3\","
@@ -842,7 +837,7 @@ public class ODataJsonSerializerTest {
         + "\"CollPropertyCompMixedEnumDef\":[]}",
         resultString);
   }
-  
+
   @Test
   public void nullComplexValueButInDataMapAndNullCollectionsNotInDataMap() throws Exception {
     final EdmEntitySet edmEntitySet = entityContainer.getEntitySet("ESMixEnumDefCollComp");
@@ -854,7 +849,7 @@ public class ODataJsonSerializerTest {
     final String resultString = IOUtils.toString(serializer.entity(metadata, edmEntitySet.getEntityType(), entity,
         EntitySerializerOptions.with()
             .contextURL(ContextURL.with().entitySet(edmEntitySet).suffix(Suffix.ENTITY).build())
-            .build()).getContent());
+            .build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{\"@odata.context\":\"$metadata#ESMixEnumDefCollComp/$entity\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
         + "\"PropertyEnumString\":\"String2,String3\","
@@ -888,7 +883,7 @@ public class ODataJsonSerializerTest {
     final String resultString = IOUtils.toString(serializer.entity(metadata, edmEntitySet.getEntityType(), entity,
         EntitySerializerOptions.with()
             .contextURL(ContextURL.with().entitySet(edmEntitySet).suffix(Suffix.ENTITY).build())
-            .build()).getContent());
+            .build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{\"@odata.context\":\"$metadata#ESMixEnumDefCollComp/$entity\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
         + "\"PropertyEnumString\":\"String2,String3\","
@@ -909,7 +904,7 @@ public class ODataJsonSerializerTest {
     final EdmEntitySet edmEntitySet = entityContainer.getEntitySet("ESTwoPrim");
     final Entity entity = data.readAll(edmEntitySet).getEntities().get(0);
     final String resultString = IOUtils.toString(serializerNoMetadata
-        .entity(metadata, edmEntitySet.getEntityType(), entity, null).getContent());
+        .entity(metadata, edmEntitySet.getEntityType(), entity, null).getContent(), StandardCharsets.UTF_8);
     final String expectedResult = "{\"PropertyInt16\":32766,\"PropertyString\":\"Test String1\"}";
     Assert.assertEquals(expectedResult, resultString);
   }
@@ -1080,7 +1075,7 @@ public class ODataJsonSerializerTest {
         .entityCollection(metadata, edmEntitySet.getEntityType(), entitySet,
             EntityCollectionSerializerOptions.with()
                 .contextURL(ContextURL.with().entitySet(edmEntitySet).build())
-                .build()).getContent());
+                .build()).getContent(), StandardCharsets.UTF_8);
     final String expectedResult = "{\"value\":["
         + "{\"PropertyInt16\":32766,\"PropertyString\":\"Test String1\"},"
         + "{\"PropertyInt16\":-365,\"PropertyString\":\"Test String2\"},"
@@ -1108,7 +1103,7 @@ public class ODataJsonSerializerTest {
         entity,
         EntitySerializerOptions.with()
             .contextURL(ContextURL.with().entitySet(edmEntitySet).suffix(Suffix.ENTITY).build())
-            .build()).getContent());
+            .build()).getContent(), StandardCharsets.UTF_8);
     final String expectedResult = "{\"@odata.context\":\"$metadata#ESMedia/$entity\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
         + "\"@odata.mediaEtag\":\"W/\\\"1\\\"\","
@@ -1125,7 +1120,7 @@ public class ODataJsonSerializerTest {
     final String resultString = IOUtils.toString(serializer.entityCollection(metadata,
         edmEntitySet.getEntityType(), entitySet,
         EntityCollectionSerializerOptions.with()
-            .contextURL(ContextURL.with().entitySet(edmEntitySet).build()).build()).getContent());
+            .contextURL(ContextURL.with().entitySet(edmEntitySet).build()).build()).getContent(), StandardCharsets.UTF_8);
     final String expectedResult = "{\"@odata.context\":\"$metadata#ESMedia\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
         + "\"value\":["
@@ -1167,7 +1162,7 @@ public class ODataJsonSerializerTest {
     final String resultString = IOUtils.toString(serializer.entityCollection(metadata,
         edmEntitySet.getEntityType(), entitySet,
         EntityCollectionSerializerOptions.with()
-            .contextURL(ContextURL.with().entitySet(edmEntitySet).build()).build()).getContent());
+            .contextURL(ContextURL.with().entitySet(edmEntitySet).build()).build()).getContent(), StandardCharsets.UTF_8);
 
     final String expected = "{\"@odata.context\":\"$metadata#ESAllNullable\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
@@ -1319,8 +1314,8 @@ public class ODataJsonSerializerTest {
                     .selectList(helper.buildContextURLSelectList(entityType, null, select))
                     .build())
                 .select(select)
-                .build()).getContent());
-    
+                .build()).getContent(), StandardCharsets.UTF_8);
+
     String expected = "{"
             + "\"@odata.context\":\"$metadata#ESFourKeyAlias"
             +   "(PropertyInt16,PropertyComp/PropertyString,PropertyCompComp/PropertyComp)\","
@@ -1459,7 +1454,7 @@ public class ODataJsonSerializerTest {
             .build())
         .getContent();
     final String resultString = IOUtils.toString(result, StandardCharsets.UTF_8);
-    Assert.assertEquals(false, resultString.contains(METADATA_TEXT));
+      Assert.assertFalse(resultString.contains(METADATA_TEXT));
   }
 
   @Test
@@ -1540,7 +1535,7 @@ public class ODataJsonSerializerTest {
                     .selectList(helper.buildContextURLSelectList(entityType, expand, select))
                     .suffix(Suffix.ENTITY).build())
                 .expand(expand)
-                .build()).getContent());
+                .build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{"
         + "\"@odata.context\":\"$metadata#ESTwoPrim(PropertyInt16,"
 		+ "NavPropertyETAllPrimOne(PropertyInt16,PropertyDate))/$entity\","
@@ -1571,7 +1566,7 @@ public class ODataJsonSerializerTest {
                     .suffix(Suffix.ENTITY).build())
                 .expand(expand)
                 .select(select)
-                .build()).getContent());
+                .build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{"
         + "\"@odata.context\":\"$metadata#ESAllPrim(PropertyInt16,PropertySByte,"
         + "NavPropertyETTwoPrimOne(),NavPropertyETTwoPrimMany())/$entity\","
@@ -1601,7 +1596,7 @@ public class ODataJsonSerializerTest {
                     .suffix(Suffix.ENTITY).build())
                 .expand(expand)
                 .select(select)
-                .build()).getContent());
+                .build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{"
         + "\"@odata.context\":\"$metadata#ESAllPrim(PropertyInt16,PropertyTimeOfDay,"
         + "NavPropertyETTwoPrimOne(),NavPropertyETTwoPrimMany())/$entity\","
@@ -1634,7 +1629,7 @@ public class ODataJsonSerializerTest {
                     .selectList(helper.buildContextURLSelectList(entityType, expand, select))
                     .suffix(Suffix.ENTITY).build())
                 .expand(expand)
-                .build()).getContent());
+                .build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{"
         + "\"@odata.context\":\"$metadata#ESTwoPrim(PropertyInt16,"
         + "NavPropertyETAllPrimMany(PropertyInt16,PropertyInt32,"
@@ -1675,7 +1670,7 @@ public class ODataJsonSerializerTest {
                     .selectList(helper.buildContextURLSelectList(entityType, expand, select))
                     .suffix(Suffix.ENTITY).build())
                 .expand(expand)
-                .build()).getContent());
+                .build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{\"@odata.context\":\"$metadata#ESTwoPrim(PropertyInt16,"
         + "NavPropertyETAllPrimOne(),NavPropertyETAllPrimMany())/$entity\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
@@ -1754,7 +1749,7 @@ public class ODataJsonSerializerTest {
                 .contextURL(ContextURL.with()
                     .entitySet(edmEntitySet).keyPath("32767").navOrPropertyPath(edmProperty.getName())
                     .build())
-                .build()).getContent());
+                .build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{"
         + "\"@odata.context\":\"../$metadata#ESAllPrim(32767)/PropertyString\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
@@ -1768,10 +1763,10 @@ public class ODataJsonSerializerTest {
     final EdmProperty edmProperty = (EdmProperty) edmEntitySet.getEntityType().getProperty("PropertyString");
     final Property property = data.readAll(edmEntitySet).getEntities().get(0).getProperty(edmProperty.getName());
     final String resultString = IOUtils.toString(serializerNoMetadata
-        .primitive(metadata, (EdmPrimitiveType) edmProperty.getType(), property, null).getContent());
+        .primitive(metadata, (EdmPrimitiveType) edmProperty.getType(), property, null).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{\"value\":\"First Resource - positive values\"}", resultString);
   }
-  
+
   @Test
   public void primitivePropertyWithMetadataFull() throws Exception {
     final EdmEntitySet edmEntitySet = entityContainer.getEntitySet("ESAllPrim");
@@ -1787,13 +1782,13 @@ public class ODataJsonSerializerTest {
                         .keyPath("32767")
                         .navOrPropertyPath(edmProperty.getName()).build())
                     .build())
-            .getContent());
+            .getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals(
         "{\"@odata.context\":\"../$metadata#ESAllPrim(32767)/PropertyString\","
             + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
             + "\"value\":\"First Resource - positive values\"}",
         resultString);
-  } 
+  }
 
   @Test
   public void primitivePropertyNull() throws Exception {
@@ -1806,7 +1801,7 @@ public class ODataJsonSerializerTest {
             .contextURL(ContextURL.with()
                 .entitySet(edmEntitySet).keyPath("4242").navOrPropertyPath(edmProperty.getName())
                 .build())
-            .build()).getContent());
+            .build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals(
         "{\"@odata.context\":\"../$metadata#ESAllPrim(4242)/PropertyString\","
             +"\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\",\"value\":null}",
@@ -1825,7 +1820,7 @@ public class ODataJsonSerializerTest {
                 .contextURL(ContextURL.with()
                     .entitySet(edmEntitySet).keyPath("1").navOrPropertyPath(edmProperty.getName())
                     .build())
-                .build()).getContent());
+                .build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{"
         + "\"@odata.context\":\"../$metadata#ESCollAllPrim(1)/CollPropertyString\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
@@ -1839,7 +1834,7 @@ public class ODataJsonSerializerTest {
     final EdmProperty edmProperty = (EdmProperty) edmEntitySet.getEntityType().getProperty("CollPropertyString");
     final Property property = data.readAll(edmEntitySet).getEntities().get(0).getProperty(edmProperty.getName());
     final String resultString = IOUtils.toString(serializerNoMetadata
-        .primitiveCollection(metadata, (EdmPrimitiveType) edmProperty.getType(), property, null).getContent());
+        .primitiveCollection(metadata, (EdmPrimitiveType) edmProperty.getType(), property, null).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{\"value\":[\"Employee1@company.example\","
         + "\"Employee2@company.example\",\"Employee3@company.example\"]}",
         resultString);
@@ -1857,7 +1852,7 @@ public class ODataJsonSerializerTest {
                                 .contextURL(ContextURL.with()
                                         .entitySet(edmEntitySet).keyPath("1").navOrPropertyPath(edmProperty.getName())
                                         .build())
-                                .build()).getContent());
+                                .build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{\"@odata.context\":\"../$metadata#ESCollAllPrim(1)/CollPropertyString\"," +
                     "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\"," +
                     "\"@odata.type\":\"#Collection(String)\",\"value\":[\"Employee1@company.example\"," +
@@ -1876,7 +1871,7 @@ public class ODataJsonSerializerTest {
                 .contextURL(ContextURL.with()
                     .entitySet(edmEntitySet).keyPath("32767").navOrPropertyPath(edmProperty.getName())
                     .build())
-                .build()).getContent());
+                .build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{"
         + "\"@odata.context\":\"../$metadata#ESMixPrimCollComp(32767)/PropertyComp\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
@@ -1890,7 +1885,7 @@ public class ODataJsonSerializerTest {
     final EdmProperty edmProperty = (EdmProperty) edmEntitySet.getEntityType().getProperty("PropertyComp");
     final Property property = data.readAll(edmEntitySet).getEntities().get(0).getProperty("PropertyComp");
     final String resultString = IOUtils.toString(serializerNoMetadata
-        .complex(metadata, (EdmComplexType) edmProperty.getType(), property, null).getContent());
+        .complex(metadata, (EdmComplexType) edmProperty.getType(), property, null).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{\"PropertyInt16\":111,\"PropertyString\":\"TEST A\"}", resultString);
   }
 
@@ -1904,7 +1899,7 @@ public class ODataJsonSerializerTest {
                     ComplexSerializerOptions.with()
                             .contextURL(ContextURL.with()
                                     .entitySet(edmEntitySet).keyPath("32767").navOrPropertyPath(edmProperty.getName())
-                                        .build()).build()).getContent());
+                                        .build()).build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{\"@odata.context\":\"../$metadata#ESMixPrimCollComp(32767)/PropertyComp\"," +
                 "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\"," +
                 "\"@odata.type\":\"#olingo.odata.test1.CTTwoPrim\"," +
@@ -1925,7 +1920,7 @@ public class ODataJsonSerializerTest {
                 .contextURL(ContextURL.with()
                     .entitySet(edmEntitySet).keyPath("32767").navOrPropertyPath(edmProperty.getName())
                     .build())
-                .build()).getContent());
+                .build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{"
         + "\"@odata.context\":\"../$metadata#ESMixPrimCollComp(32767)/CollPropertyComp\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
@@ -1942,7 +1937,7 @@ public class ODataJsonSerializerTest {
     final EdmProperty edmProperty = (EdmProperty) edmEntitySet.getEntityType().getProperty("CollPropertyComp");
     final Property property = data.readAll(edmEntitySet).getEntities().get(0).getProperty(edmProperty.getName());
     final String resultString = IOUtils.toString(serializerNoMetadata
-        .complexCollection(metadata, (EdmComplexType) edmProperty.getType(), property, null).getContent());
+        .complexCollection(metadata, (EdmComplexType) edmProperty.getType(), property, null).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{\"value\":[{\"PropertyInt16\":123,\"PropertyString\":\"TEST 1\"},"
         + "{\"PropertyInt16\":456,\"PropertyString\":\"TEST 2\"},"
         + "{\"PropertyInt16\":789,\"PropertyString\":\"TEST 3\",\"AdditionalPropString\":\"ADD TEST\"}]}",
@@ -1961,7 +1956,7 @@ public class ODataJsonSerializerTest {
                         .keyPath("32767")
                         .navOrPropertyPath(edmProperty.getName()).build())
                     .build())
-            .getContent());
+            .getContent(), StandardCharsets.UTF_8);
     final String expectedResult = "{\"@odata.context\":\"../$metadata#ESMixPrimCollComp(32767)/CollPropertyComp\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
         + "\"@odata.type\":\"#Collection(olingo.odata.test1.CTTwoPrim)\","
@@ -1999,7 +1994,7 @@ public class ODataJsonSerializerTest {
     final EdmEntitySet edmEntitySet = entityContainer.getEntitySet("ESAllPrim");
     final Entity entity = data.readAll(edmEntitySet).getEntities().get(0);
     final String resultString = IOUtils.toString(
-        serializerNoMetadata.reference(metadata, edmEntitySet, entity, null).getContent());
+        serializerNoMetadata.reference(metadata, edmEntitySet, entity, null).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{\"@odata.id\":\"ESAllPrim(32767)\"}", resultString);
   }
 
@@ -2046,7 +2041,7 @@ public class ODataJsonSerializerTest {
     final EdmEntitySet edmEntitySet = entityContainer.getEntitySet("ESAllPrim");
     final EntityCollection entityCollection = new EntityCollection();
     final String resultString = IOUtils.toString(serializerNoMetadata
-        .referenceCollection(metadata, edmEntitySet, entityCollection, null).getContent());
+        .referenceCollection(metadata, edmEntitySet, entityCollection, null).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{\"value\":[]}", resultString);
   }
 
@@ -2130,7 +2125,7 @@ public class ODataJsonSerializerTest {
             PrimitiveSerializerOptions.with()
                 .contextURL(ContextURL.with()
                     .entitySet(edmEntitySet).keyPath("1").navOrPropertyPath(edmProperty.getName()).build())
-                .build()).getContent());
+                .build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{"
         + "\"@odata.context\":\"../$metadata#ESCollAllPrim(1)/CollPropertyInt64\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
@@ -2149,7 +2144,7 @@ public class ODataJsonSerializerTest {
             PrimitiveSerializerOptions.with()
                 .contextURL(ContextURL.with()
                     .entitySet(edmEntitySet).keyPath("1").navOrPropertyPath(edmProperty.getName()).build())
-                .build()).getContent());
+                .build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{"
         + "\"@odata.context\":\"../$metadata#ESCollAllPrim(1)/CollPropertyDecimal\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
@@ -2167,7 +2162,7 @@ public class ODataJsonSerializerTest {
             PrimitiveSerializerOptions.with()
                 .contextURL(ContextURL.with()
                     .entitySet(edmEntitySet).keyPath("32767").navOrPropertyPath(edmProperty.getName()).build())
-                .build()).getContent());
+                .build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{"
         + "\"@odata.context\":\"../$metadata#ESAllPrim(32767)/PropertyInt64\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
@@ -2185,7 +2180,7 @@ public class ODataJsonSerializerTest {
             PrimitiveSerializerOptions.with()
                 .contextURL(ContextURL.with()
                     .entitySet(edmEntitySet).keyPath("32767").navOrPropertyPath(edmProperty.getName()).build())
-                .build()).getContent());
+                .build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{"
         + "\"@odata.context\":\"../$metadata#ESAllPrim(32767)/PropertyDecimal\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
@@ -2208,11 +2203,11 @@ public class ODataJsonSerializerTest {
             .build()).getContent();
     final String resultString = IOUtils.toString(result, StandardCharsets.UTF_8);
 
-    Assert.assertThat(resultString, CoreMatchers.startsWith("{"
+    MatcherAssert.assertThat(resultString, CoreMatchers.startsWith("{"
         + "\"@odata.context\":\"$metadata#ESAllPrim\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
         + "\"@odata.count\":\"4\",\"value\":["));
-    Assert.assertThat(resultString, CoreMatchers.endsWith("],"
+    MatcherAssert.assertThat(resultString, CoreMatchers.endsWith("],"
         + "\"@odata.nextLink\":\"/next\"}"));
 
     int count = 0;
@@ -2238,10 +2233,10 @@ public class ODataJsonSerializerTest {
             .build()).getContent();
     final String resultString = IOUtils.toString(result, StandardCharsets.UTF_8);
 
-    Assert.assertThat(resultString, CoreMatchers.startsWith("{"
+    MatcherAssert.assertThat(resultString, CoreMatchers.startsWith("{"
         + "\"@odata.context\":\"../$metadata#Collection($ref)\","
         + "\"@odata.count\":\"4\",\"value\":["));
-    Assert.assertThat(resultString, CoreMatchers.endsWith("],"
+    MatcherAssert.assertThat(resultString, CoreMatchers.endsWith("],"
         + "\"@odata.nextLink\":\"/next\"}"));
 
     int count = 0;
@@ -2260,7 +2255,7 @@ public class ODataJsonSerializerTest {
             createPoint(1.5, 4.25)));
     Assert.assertEquals("{\"" + entityType.getPropertyNames().get(0) + "\":{"
         + "\"type\":\"Point\",\"coordinates\":[1.5,4.25]}}",
-        IOUtils.toString(serializerNoMetadata.entity(metadata, entityType, entity, null).getContent()));
+        IOUtils.toString(serializerNoMetadata.entity(metadata, entityType, entity, null).getContent(), StandardCharsets.UTF_8));
 
     Point point = new Point(Dimension.GEOMETRY, null);
     point.setZ(42);
@@ -2268,7 +2263,7 @@ public class ODataJsonSerializerTest {
         point));
     Assert.assertEquals("{\"" + entityType.getPropertyNames().get(0) + "\":{"
         + "\"type\":\"Point\",\"coordinates\":[0.0,0.0,42.0]}}",
-        IOUtils.toString(serializerNoMetadata.entity(metadata, entityType, entity, null).getContent()));
+        IOUtils.toString(serializerNoMetadata.entity(metadata, entityType, entity, null).getContent(), StandardCharsets.UTF_8));
   }
 
   @Test
@@ -2280,7 +2275,7 @@ public class ODataJsonSerializerTest {
                 createPoint(2.5, 3.125), createPoint(3.5, 4.125), createPoint(4.5, 5.125)))));
     Assert.assertEquals("{\"" + entityType.getPropertyNames().get(0) + "\":{"
         + "\"type\":\"MultiPoint\",\"coordinates\":[[2.5,3.125],[3.5,4.125],[4.5,5.125]]}}",
-        IOUtils.toString(serializerNoMetadata.entity(metadata, entityType, entity, null).getContent()));
+        IOUtils.toString(serializerNoMetadata.entity(metadata, entityType, entity, null).getContent(), StandardCharsets.UTF_8));
   }
 
   @Test
@@ -2292,7 +2287,7 @@ public class ODataJsonSerializerTest {
                 createPoint(1, 1), createPoint(2, 2), createPoint(3, 3), createPoint(4, 4), createPoint(5, 5)))));
     Assert.assertEquals("{\"" + entityType.getPropertyNames().get(0) + "\":{"
         + "\"type\":\"LineString\",\"coordinates\":[[1.0,1.0],[2.0,2.0],[3.0,3.0],[4.0,4.0],[5.0,5.0]]}}",
-        IOUtils.toString(serializerNoMetadata.entity(metadata, entityType, entity, null).getContent()));
+        IOUtils.toString(serializerNoMetadata.entity(metadata, entityType, entity, null).getContent(), StandardCharsets.UTF_8));
   }
 
   @Test
@@ -2309,7 +2304,7 @@ public class ODataJsonSerializerTest {
         + "\"type\":\"MultiLineString\",\"coordinates\":["
         + "[[1.0,1.0],[2.0,2.0],[3.0,3.0],[4.0,4.0],[5.0,5.0]],"
         + "[[99.5,101.5],[150.0,151.25]]]}}",
-        IOUtils.toString(serializerNoMetadata.entity(metadata, entityType, entity, null).getContent()));
+        IOUtils.toString(serializerNoMetadata.entity(metadata, entityType, entity, null).getContent(), StandardCharsets.UTF_8));
   }
 
   @Test
@@ -2318,22 +2313,23 @@ public class ODataJsonSerializerTest {
     Entity entity = new Entity()
         .addProperty(new Property(null, entityType.getPropertyNames().get(0), ValueType.GEOSPATIAL,
             new Polygon(Dimension.GEOMETRY, null,
-                Arrays.asList(
-                    createPoint(1, 1), createPoint(1, 2), createPoint(2, 2), createPoint(2, 1), createPoint(1, 1)),
-                Arrays.asList(
-                    createPoint(0, 0), createPoint(3, 0), createPoint(3, 3), createPoint(0, 3), createPoint(0, 0)))));
+                    List.of(new LineString(Dimension.GEOMETRY, null, Arrays.asList(
+                            createPoint(1, 1), createPoint(1, 2), createPoint(2, 2), createPoint(2, 1), createPoint(1, 1)))),
+                new LineString(Dimension.GEOMETRY, null, Arrays.asList(
+                    createPoint(0, 0), createPoint(3, 0), createPoint(3, 3), createPoint(0, 3), createPoint(0, 0))))));
     Assert.assertEquals("{\"" + entityType.getPropertyNames().get(0) + "\":{"
         + "\"type\":\"Polygon\",\"coordinates\":[[[0.0,0.0],[3.0,0.0],[3.0,3.0],[0.0,3.0],[0.0,0.0]],"
         + "[[1.0,1.0],[1.0,2.0],[2.0,2.0],[2.0,1.0],[1.0,1.0]]]}}",
-        IOUtils.toString(serializerNoMetadata.entity(metadata, entityType, entity, null).getContent()));
+        IOUtils.toString(serializerNoMetadata.entity(metadata, entityType, entity, null).getContent(), StandardCharsets.UTF_8));
 
     entity = new Entity().addProperty(new Property(null, entityType.getPropertyNames().get(0), ValueType.GEOSPATIAL,
-        new Polygon(Dimension.GEOMETRY, null, null, Arrays.asList(
-            createPoint(10, 10), createPoint(30, 10), createPoint(30, 30), createPoint(10, 30),
-            createPoint(10, 10)))));
+        new Polygon(Dimension.GEOMETRY, null, null,
+            new LineString(Dimension.GEOMETRY, null, Arrays.asList(
+                createPoint(10, 10), createPoint(30, 10), createPoint(30, 30), createPoint(10, 30),
+                createPoint(10, 10))))));
     Assert.assertEquals("{\"" + entityType.getPropertyNames().get(0) + "\":{"
         + "\"type\":\"Polygon\",\"coordinates\":[[[10.0,10.0],[30.0,10.0],[30.0,30.0],[10.0,30.0],[10.0,10.0]]]}}",
-        IOUtils.toString(serializerNoMetadata.entity(metadata, entityType, entity, null).getContent()));
+        IOUtils.toString(serializerNoMetadata.entity(metadata, entityType, entity, null).getContent(), StandardCharsets.UTF_8));
   }
 
   @Test
@@ -2343,23 +2339,23 @@ public class ODataJsonSerializerTest {
         .addProperty(new Property(null, entityType.getPropertyNames().get(0), ValueType.GEOSPATIAL,
             new MultiPolygon(Dimension.GEOMETRY, null, Arrays.asList(
                 new Polygon(Dimension.GEOMETRY, null,
-                    Arrays.asList(
-                        createPoint(1, 1), createPoint(1, 2), createPoint(2, 2), createPoint(2, 1), createPoint(1, 1)),
-                    Arrays.asList(
+                        List.of(new LineString(Dimension.GEOMETRY, null, Arrays.asList(
+                                createPoint(1, 1), createPoint(1, 2), createPoint(2, 2), createPoint(2, 1), createPoint(1, 1)))),
+                    new LineString(Dimension.GEOMETRY, null, Arrays.asList(
                         createPoint(0, 0), createPoint(3, 0), createPoint(3, 3), createPoint(0, 3),
-                        createPoint(0, 0))),
+                        createPoint(0, 0)))),
                 new Polygon(Dimension.GEOMETRY, null,
-                    Arrays.asList(
-                        createPoint(10, 10), createPoint(10, 20), createPoint(20, 10), createPoint(10, 10)),
-                    Arrays.asList(
-                        createPoint(0, 0), createPoint(30, 0), createPoint(0, 30), createPoint(0, 0)))))));
+                        List.of(new LineString(Dimension.GEOMETRY, null, Arrays.asList(
+                                createPoint(10, 10), createPoint(10, 20), createPoint(20, 10), createPoint(10, 10)))),
+                    new LineString(Dimension.GEOMETRY, null, Arrays.asList(
+                        createPoint(0, 0), createPoint(30, 0), createPoint(0, 30), createPoint(0, 0))))))));
     Assert.assertEquals("{\"" + entityType.getPropertyNames().get(0) + "\":{"
         + "\"type\":\"MultiPolygon\",\"coordinates\":["
         + "[[[0.0,0.0],[3.0,0.0],[3.0,3.0],[0.0,3.0],[0.0,0.0]],"
         + "[[1.0,1.0],[1.0,2.0],[2.0,2.0],[2.0,1.0],[1.0,1.0]]],"
         + "[[[0.0,0.0],[30.0,0.0],[0.0,30.0],[0.0,0.0]],"
         + "[[10.0,10.0],[10.0,20.0],[20.0,10.0],[10.0,10.0]]]]}}",
-        IOUtils.toString(serializerNoMetadata.entity(metadata, entityType, entity, null).getContent()));
+        IOUtils.toString(serializerNoMetadata.entity(metadata, entityType, entity, null).getContent(), StandardCharsets.UTF_8));
   }
 
   @Test
@@ -2374,7 +2370,7 @@ public class ODataJsonSerializerTest {
         + "\"type\":\"GeometryCollection\",\"geometries\":["
         + "{\"type\":\"Point\",\"coordinates\":[100.0,0.0]},"
         + "{\"type\":\"LineString\",\"coordinates\":[[101.0,0.0],[102.0,1.0]]}]}}",
-        IOUtils.toString(serializerNoMetadata.entity(metadata, entityType, entity, null).getContent()));
+        IOUtils.toString(serializerNoMetadata.entity(metadata, entityType, entity, null).getContent(), StandardCharsets.UTF_8));
   }
 
   private EdmEntityType mockEntityType(final EdmPrimitiveTypeKind type) {
@@ -2384,7 +2380,7 @@ public class ODataJsonSerializerTest {
     Mockito.when(property.getType()).thenReturn(odata.createPrimitiveTypeInstance(type));
     Mockito.when(property.isPrimitive()).thenReturn(true);
     EdmEntityType entityType = Mockito.mock(EdmEntityType.class);
-    Mockito.when(entityType.getPropertyNames()).thenReturn(Arrays.asList(name));
+    Mockito.when(entityType.getPropertyNames()).thenReturn(List.of(name));
     Mockito.when(entityType.getStructuralProperty(name)).thenReturn(property);
     return entityType;
   }
@@ -2397,7 +2393,7 @@ public class ODataJsonSerializerTest {
             new Point(Dimension.GEOMETRY, SRID.valueOf("42"))));
     Assert.assertEquals("{\"PropertyGeometryPoint\":{\"type\":\"Point\",\"coordinates\":[0.0,0.0],"
     		+ "\"crs\":{\"type\":\"name\",\"properties\":{\"name\":\"EPSG:42\"}}}}",
-            IOUtils.toString(serializerNoMetadata.entity(metadata, entityType, entity, null).getContent()));
+            IOUtils.toString(serializerNoMetadata.entity(metadata, entityType, entity, null).getContent(), StandardCharsets.UTF_8));
   }
 
   private Point createPoint(final double x, final double y) {
@@ -2570,7 +2566,7 @@ public class ODataJsonSerializerTest {
                     .entitySet(edmEntitySet).keyPath("32767").navOrPropertyPath(edmProperty.getName() 
                         + "/olingo.odata.test1.CTBase")
                     .build())
-                .build()).getContent());
+                .build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{\"@odata.context\":\"../../$metadata#ESMixPrimCollComp(32767)/"
         + "PropertyComp/olingo.odata.test1.CTBase\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
@@ -2707,7 +2703,7 @@ public class ODataJsonSerializerTest {
     
     final UriInfoResource resource = ExpandSelectMock.mockComplexTypeResource(propertyWithinCT);
     final SelectItem selectItem = ExpandSelectMock.mockSelectItemForColComplexProperty(resource);
-    final SelectOption selectOption = ExpandSelectMock.mockSelectOption(Arrays.asList(selectItem));
+    final SelectOption selectOption = ExpandSelectMock.mockSelectOption(List.of(selectItem));
     
     final String resultString = IOUtils.toString(serializer
         .complexCollection(metadata, (EdmComplexType) edmProperty.getType(), property,
@@ -2716,7 +2712,7 @@ public class ODataJsonSerializerTest {
                     .entitySet(edmEntitySet).keyPath("1")
                     .navOrPropertyPath("CollPropertyComp")
                     .build()).select(selectOption)
-                .build()).getContent());
+                .build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{\"@odata.context\":\"../$metadata#ESKeyNav(1)/CollPropertyComp\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
         + "\"value\":[{\"PropertyInt16\":1},{\"PropertyInt16\":2},{\"PropertyInt16\":3}]}",
@@ -2735,14 +2731,14 @@ public class ODataJsonSerializerTest {
     
     final UriInfoResource resource = ExpandSelectMock.mockComplexTypeResource(propertyWithinCT);
     final SelectItem selectItem = ExpandSelectMock.mockSelectItemForColComplexProperty(resource);
-    final SelectOption selectOption = ExpandSelectMock.mockSelectOption(Arrays.asList(selectItem));
+    final SelectOption selectOption = ExpandSelectMock.mockSelectOption(List.of(selectItem));
     
     final String resultString = IOUtils.toString(serializerNoMetadata
         .complexCollection(metadata, (EdmComplexType) edmProperty.getType(), property, ComplexSerializerOptions.with()
             .contextURL(ContextURL.with()
                 .entitySet(edmEntitySet).keyPath("1")
                 .navOrPropertyPath("CollPropertyComp")
-                .build()).select(selectOption).build()).getContent());
+                .build()).select(selectOption).build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{\"value\":[{\"PropertyInt16\":1},{\"PropertyInt16\":2},{\"PropertyInt16\":3}]}",
         resultString);
   }
@@ -2758,7 +2754,7 @@ public class ODataJsonSerializerTest {
     
     final UriInfoResource resource = ExpandSelectMock.mockComplexTypeResource(propertyWithinCT);
     final SelectItem selectItem = ExpandSelectMock.mockSelectItemForColComplexProperty(resource);
-    final SelectOption selectOption = ExpandSelectMock.mockSelectOption(Arrays.asList(selectItem));
+    final SelectOption selectOption = ExpandSelectMock.mockSelectOption(List.of(selectItem));
     
     final Property property = data.readAll(edmEntitySet).getEntities().get(0).getProperty(edmProperty.getName());
     final String resultString = IOUtils.toString(serializerFullMetadata
@@ -2769,7 +2765,7 @@ public class ODataJsonSerializerTest {
                         .navOrPropertyPath("CollPropertyComp").build())
                     .select(selectOption)
                     .build())
-            .getContent());
+            .getContent(), StandardCharsets.UTF_8);
     assertTrue(resultString.contains("\"value\":[{\"@odata.type\":\"#olingo.odata.test1.CTPrimComp\","
         + "\"PropertyInt16@odata.type\":\"#Int16\",\"PropertyInt16\":1},"
         + "{\"@odata.type\":\"#olingo.odata.test1.CTPrimComp\","
@@ -2784,7 +2780,7 @@ public class ODataJsonSerializerTest {
     final Entity entity = data.readAll(edmEntitySet).getEntities().get(0);
     final SelectItem selectItem = ExpandSelectMock.mockSelectItem(edmEntitySet, 
         "CollPropertyCompNav", "NavPropertyETTwoKeyNavOne");
-    final SelectOption select = ExpandSelectMock.mockSelectOption(Arrays.asList(selectItem));
+    final SelectOption select = ExpandSelectMock.mockSelectOption(List.of(selectItem));
     InputStream result = serializer.entity(metadata, edmEntitySet.getEntityType(), entity,
         EntitySerializerOptions.with()
             .contextURL(ContextURL.with().entitySet(edmEntitySet).suffix(Suffix.ENTITY).build())
@@ -2806,7 +2802,7 @@ public class ODataJsonSerializerTest {
         .entity(metadata, edmEntitySet.getEntityType(), entity, 
             EntitySerializerOptions.with()
             .contextURL(ContextURL.with().entitySet(edmEntitySet).suffix(Suffix.ENTITY).build())
-            .build()).getContent());
+            .build()).getContent(), StandardCharsets.UTF_8);
     final String expectedResult = "{\"@odata.context\":\"$metadata#ESCompMixPrimCollComp/$entity\","
         + "\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
         + "\"@odata.type\":\"#olingo.odata.test1.ETCompMixPrimCollComp\","
@@ -2859,7 +2855,7 @@ public class ODataJsonSerializerTest {
                             .contextURL(ContextURL.with()
                                     .entitySet(edmEntitySet).keyPath("1")
                                     .navOrPropertyPath(edmComplexType.getName()+"/"+property.getName())
-                                        .build()).build()).getContent());
+                                        .build()).build()).getContent(), StandardCharsets.UTF_8);
     Assert.assertEquals("{\"@odata.context\":\"../../$metadata#ESCompMixPrimCollComp(1)/"
         + "PropertyMixedPrimCollComp/PropertyComp\",\"@odata.metadataEtag\":\"W/\\\"metadataETag\\\"\","
         + "\"@odata.type\":\"#olingo.odata.test1.CTTwoPrim\","
@@ -2876,7 +2872,7 @@ public class ODataJsonSerializerTest {
     final Entity entity = data.readAll(edmEntitySet).getEntities().get(1);
     final ExpandItem expandItem = ExpandSelectMock.mockExpandItem(edmEntitySet, 
         "PropertyCompWithStream", "PropertyStream");
-    final ExpandOption expand = ExpandSelectMock.mockExpandOption(Arrays.asList(expandItem));
+    final ExpandOption expand = ExpandSelectMock.mockExpandOption(List.of(expandItem));
     InputStream result = serializerV401.entity(metadata, edmEntitySet.getEntityType(), entity,
         EntitySerializerOptions.with()
             .contextURL(ContextURL.with().entitySet(edmEntitySet).suffix(Suffix.ENTITY).build())
@@ -2937,7 +2933,7 @@ public class ODataJsonSerializerTest {
     final Entity entity = data.readAll(edmEntitySet).getEntities().get(1);
     final ExpandItem expandItem = ExpandSelectMock.mockExpandItem(edmEntitySet, 
         "PropertyCompWithStream", "PropertyStream");
-    final ExpandOption expand = ExpandSelectMock.mockExpandOption(Arrays.asList(expandItem));
+    final ExpandOption expand = ExpandSelectMock.mockExpandOption(List.of(expandItem));
     InputStream result = serializerNoMetadataV401.entity(metadata, edmEntitySet.getEntityType(), entity,
         EntitySerializerOptions.with()
             .contextURL(ContextURL.with().entitySet(edmEntitySet).suffix(Suffix.ENTITY).build())
